--- a/data/custom_tasks.json
+++ b/data/custom_tasks.json
@@ -1,34 +1,34 @@
 {
   "tasks": [
     {
-      "instruction": "Who is the current Prime Minister of the United Kingdom as of 2025?",
-      "context": "The answer can be found on the current Wikipedia page for the 'Prime Minister of the United Kingdom'.",
-      "response": "Keir Starmer",
-      "category": "current_affairs"
+      "instruction": "What is the capital of France?",
+      "context": "",
+      "response": "Paris",
+      "category": "geography"
     },
     {
-      "instruction": "Which movie won the Academy Award for Best Picture in 2025?",
-      "context": "This can be verified from the latest 'Academy Award for Best Picture' Wikipedia page.",
-      "response": "Oppenheimer",
-      "category": "entertainment"
+      "instruction": "Who wrote the play 'Romeo and Juliet'?",
+      "context": "",
+      "response": "William Shakespeare",
+      "category": "literature"
     },
     {
-      "instruction": "Who is the reigning Formula 1 World Champion as of the 2025 season?",
-      "context": "Refer to the 2025 Formula One World Championship page on Wikipedia.",
-      "response": "Max Verstappen",
-      "category": "sports"
+      "instruction": "What is the chemical symbol for water?",
+      "context": "",
+      "response": "H2O",
+      "category": "science"
     },
     {
-      "instruction": "What is the latest iPhone model released by Apple according to Wikipedia in 2025?",
-      "context": "Check the 'iPhone' Wikipedia article for the most recent release.",
-      "response": "iPhone 16 Pro",
-      "category": "technology"
+      "instruction": "Which planet is known as the Red Planet?",
+      "context": "",
+      "response": "Mars",
+      "category": "astronomy"
     },
     {
-      "instruction": "Which country joined the European Union most recently as of 2025?",
-      "context": "Information available on the Wikipedia page for 'Enlargement of the European Union'.",
-      "response": "Ukraine",
-      "category": "geopolitics"
+      "instruction": "What is 9 multiplied by 8?",
+      "context": "",
+      "response": "72",
+      "category": "mathematics"
     }
   ]
 }
